# Template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml  templatebuild.yml
lib/: CMakeLists.txt  FetchLibraries.cmake
scripts/: build.sh  settings.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  FetchGTest.cmake
